samples/_failures_safe/1761361187_58441f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2baa9e5e.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_2baa9e5e.c:156:13: error: expected declaration or statement at end of input
  156 |             lexer->column++;
      |             ^~~~~
./samples/SAFE/__tmp_2baa9e5e.c:156:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2baa9e5e.c:156:13: error: expected declaration or statement at end of input
